# nzcvm_webapp

./: 2p_nginx_config.conf  TEST_README.md  app.py  docker-compose.yml  index.html  nzcvm_webapp.service  pyproject.toml  readme.md  requirements.txt  simple_map.html  test_conversion.html
.github/workflows/: deptry.yml
css/: styles.css
docker/: 2p_nginx_config.conf  Dockerfile  nginx.conf  nzcvm_config.service  start.sh
docker/nzcvm_webapp_backend/: Dockerfile  app.py  generate_model_outlines.py  helpers.py  requirements.txt
docker/nzcvm_webapp_frontend/: Dockerfile  nginx.conf
js/: apiClient.js  formHandler.js  geojsonHandler.js  locationUpload.js  mapSetup.js  nzcvm2_config_map.js  nzcvm_config_map.js  old_js.js  rectangleControls.js  simple_map.js  utils.js
nzcvm_webapp/nzcvm_webapp_backend/: Dockerfile  app.py  generate_model_outlines.py  helpers.py  startup.sh
nzcvm_webapp/nzcvm_webapp_frontend/: Dockerfile  nginx.conf
process_regions/: process_model_versions.py
