[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nzcvm_webapp"
authors = [
    {name = "QuakeCoRE" },
]
description = "A web app interface for the NZCVM"
readme = "readme.md"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[tool.setuptools.package-dir]
nzcvm_webapp = "nzcvm_webapp"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff.lint]
extend-select = [
  # isort imports
  "I",
  # Use r'\s+' rather than '\s+'
  "W605",
  # All the naming errors, like using camel case for function names.
  "N",
  # Missing docstrings in classes, methods, and functions
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  # Use f-string instead of a format call
  "UP032",
  # Standard library import is deprecated
  "UP035",
  # Missing function argument type-annotation
  "ANN001",
  # Using except without specifying an exception type to catch
  "BLE001"
]
ignore = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [
    "velocity_modelling",
]

[tool.ruff.lint.per-file-ignores]
# Ignore no docstring in __init__.py
"__init__.py" = ["D104"]
# Ignore docstring errors in tests folder
"tests/**.py" = ["D"]


